@@ -1,8 +1,10 @@
 package io.openems.edge.core.host;
 
 import java.io.IOException;
+import java.net.Inet4Address;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.util.List;
 import java.util.Scanner;
 import java.util.concurrent.CompletableFuture;
 
@@ -16,23 +18,27 @@ import org.osgi.service.component.annotations.Modified;
 import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.metatype.annotations.Designate;
 import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import io.openems.common.exceptions.OpenemsError;
 import io.openems.common.exceptions.OpenemsError.OpenemsNamedException;
 import io.openems.common.exceptions.OpenemsException;
 import io.openems.common.jsonrpc.base.GenericJsonrpcResponseSuccess;
-import io.openems.common.jsonrpc.base.JsonrpcRequest;
 import io.openems.common.jsonrpc.base.JsonrpcResponseSuccess;
 import io.openems.common.oem.OpenemsEdgeOem;
 import io.openems.common.session.Role;
 import io.openems.edge.common.component.AbstractOpenemsComponent;
 import io.openems.edge.common.component.OpenemsComponent;
 import io.openems.edge.common.host.Host;
-import io.openems.edge.common.jsonapi.JsonApi;
+import io.openems.edge.common.jsonapi.ComponentJsonApi;
+import io.openems.edge.common.jsonapi.EdgeGuards;
+import io.openems.edge.common.jsonapi.EdgeKeys;
+import io.openems.edge.common.jsonapi.JsonApiBuilder;
 import io.openems.edge.common.user.User;
 import io.openems.edge.core.host.jsonrpc.ExecuteSystemCommandRequest;
 import io.openems.edge.core.host.jsonrpc.ExecuteSystemRestartRequest;
 import io.openems.edge.core.host.jsonrpc.ExecuteSystemUpdateRequest;
+import io.openems.edge.core.host.jsonrpc.GetIpAddresses;
+import io.openems.edge.core.host.jsonrpc.GetIpAddresses.Response;
 import io.openems.edge.core.host.jsonrpc.GetNetworkConfigRequest;
 import io.openems.edge.core.host.jsonrpc.GetNetworkConfigResponse;
 import io.openems.edge.core.host.jsonrpc.GetSystemUpdateStateRequest;
@@ -48,7 +54,9 @@ import io.openems.edge.core.host.jsonrpc.SetNetworkConfigRequest;
 		property = { //
 				"enabled=true" //
 		})
-public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsComponent, JsonApi {
+public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsComponent, ComponentJsonApi {
+
+	private final Logger log = LoggerFactory.getLogger(HostImpl.class);
 
 	protected final OperatingSystem operatingSystem;
 
@@ -74,6 +82,8 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 		// Initialize correct Operating System handler
 		if (System.getProperty("os.name").startsWith("Windows")) {
 			this.operatingSystem = new OperatingSystemWindows();
+		} else if (System.getProperty("os.name").startsWith("Mac")) {
+			this.operatingSystem = new OperatingSystemMac();
 		} else {
 			this.operatingSystem = new OperatingSystemDebianSystemd(this);
 		}
@@ -93,6 +103,13 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 				e1.printStackTrace();
 			}
 		}
+
+		this.operatingSystem.getOperatingSystemVersion().whenComplete((name, error) -> {
+			this._setOsVersion(name);
+			if (error != null) {
+				this.log.info("Error while trying to get operating system version", error);
+			}
+		});
 	}
 
 	@Activate
@@ -140,32 +157,50 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 	}
 
 	@Override
-	public CompletableFuture<? extends JsonrpcResponseSuccess> handleJsonrpcRequest(User user, JsonrpcRequest request)
-			throws OpenemsNamedException {
-		user.assertRoleIsAtLeast("handleJsonrpcRequest", Role.OWNER);
-		switch (request.getMethod()) {
+	public void buildJsonApiRoutes(JsonApiBuilder builder) {
+		builder.handleRequest(GetNetworkConfigRequest.METHOD, call -> {
+			return this.handleGetNetworkConfigRequest(call.get(EdgeKeys.USER_KEY),
+					GetNetworkConfigRequest.from(call.getRequest()));
+		});
 
-		case GetNetworkConfigRequest.METHOD:
-			return this.handleGetNetworkConfigRequest(user, GetNetworkConfigRequest.from(request));
+		builder.handleRequest(SetNetworkConfigRequest.METHOD, call -> {
+			return this.handleSetNetworkConfigRequest(call.get(EdgeKeys.USER_KEY),
+					SetNetworkConfigRequest.from(call.getRequest()));
+		});
 
-		case SetNetworkConfigRequest.METHOD:
-			return this.handleSetNetworkConfigRequest(user, SetNetworkConfigRequest.from(request));
+		builder.handleRequest(GetSystemUpdateStateRequest.METHOD, call -> {
+			return this.handleGetSystemUpdateStateRequest(call.get(EdgeKeys.USER_KEY),
+					GetSystemUpdateStateRequest.from(call.getRequest())).get();
+		});
 
-		case GetSystemUpdateStateRequest.METHOD:
-			return this.handleGetSystemUpdateStateRequest(user, GetSystemUpdateStateRequest.from(request));
+		builder.handleRequest(ExecuteSystemUpdateRequest.METHOD, call -> {
+			return this.handleExecuteSystemUpdateRequest(call.get(EdgeKeys.USER_KEY),
+					ExecuteSystemUpdateRequest.from(call.getRequest())).get();
+		});
 
-		case ExecuteSystemUpdateRequest.METHOD:
-			return this.handleExecuteSystemUpdateRequest(user, ExecuteSystemUpdateRequest.from(request));
+		builder.handleRequest(ExecuteSystemCommandRequest.METHOD, call -> {
+			return this.handleExecuteCommandRequest(call.get(EdgeKeys.USER_KEY),
+					ExecuteSystemCommandRequest.from(call.getRequest())).get();
+		});
 
-		case ExecuteSystemCommandRequest.METHOD:
-			return this.handleExecuteCommandRequest(user, ExecuteSystemCommandRequest.from(request));
+		builder.handleRequest(ExecuteSystemRestartRequest.METHOD, call -> {
+			return this.handleExecuteSystemRestartRequest(call.get(EdgeKeys.USER_KEY),
+					ExecuteSystemRestartRequest.from(call.getRequest())).get();
+		});
 
-		case ExecuteSystemRestartRequest.METHOD:
-			return this.handleExecuteSystemRestartRequest(user, ExecuteSystemRestartRequest.from(request));
+		builder.handleRequest(new GetIpAddresses(), endpoint -> {
+			endpoint.setDescription("""
+					Gets the current ip addresses.
+					""".stripIndent());
 
-		default:
-			throw OpenemsError.JSONRPC_UNHANDLED_METHOD.exception(request.getMethod());
-		}
+			endpoint.setGuards(EdgeGuards.roleIsAtleast(Role.OWNER));
+		}, call -> new Response(this.getSystemIPs()));
+
+	}
+
+	@Override
+	public List<Inet4Address> getSystemIPs() throws OpenemsNamedException {
+		return this.operatingSystem.getSystemIPs();
 	}
 
 	/**
@@ -176,12 +211,11 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleGetNetworkConfigRequest(User user,
-			GetNetworkConfigRequest request) throws OpenemsNamedException {
+	private GetNetworkConfigResponse handleGetNetworkConfigRequest(User user, GetNetworkConfigRequest request)
+			throws OpenemsNamedException {
 		user.assertRoleIsAtLeast("handleGetNetworkConfigRequest", Role.OWNER);
 		var config = this.operatingSystem.getNetworkConfiguration();
-		var response = new GetNetworkConfigResponse(request.getId(), config);
-		return CompletableFuture.completedFuture(response);
+		return new GetNetworkConfigResponse(request.getId(), config);
 	}
 
 	/**
@@ -192,8 +226,8 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleSetNetworkConfigRequest(User user,
-			SetNetworkConfigRequest request) throws OpenemsNamedException {
+	public GenericJsonrpcResponseSuccess handleSetNetworkConfigRequest(User user, SetNetworkConfigRequest request)
+			throws OpenemsNamedException {
 		user.assertRoleIsAtLeast("handleSetNetworkConfigRequest", Role.OWNER);
 		var oldNetworkConfiguration = this.operatingSystem.getNetworkConfiguration();
 		this.operatingSystem.handleSetNetworkConfigRequest(user, oldNetworkConfiguration, request);
@@ -201,7 +235,7 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 		// Notify NetworkConfigurationWorker about the change
 		this.networkConfigurationWorker.triggerNextRun();
 
-		return CompletableFuture.completedFuture(new GenericJsonrpcResponseSuccess(request.getId()));
+		return new GenericJsonrpcResponseSuccess(request.getId());
 	}
 
 	/**
@@ -285,8 +319,13 @@ public class HostImpl extends AbstractOpenemsComponent implements Host, OpenemsC
 	 * @throws IOException on error
 	 */
 	private static String execReadToString(String execCommand) throws IOException {
-		try (var s = new Scanner(Runtime.getRuntime().exec(execCommand).getInputStream()).useDelimiter("\\A")) {
+		ProcessBuilder processBuilder = new ProcessBuilder(execCommand.split(" "));
+		processBuilder.redirectErrorStream(true);
+		Process process = processBuilder.start();
+
+		try (var s = new Scanner(process.getInputStream()).useDelimiter("\\A")) {
 			return s.hasNext() ? s.next().trim() : "";
 		}
 	}
+
 }
